# rating-physics

./: Cargo.toml  Dioxus.toml  build.rs
icons_macos/: icon.icns
locales/ru-RU/: main.ftl
src/: main.rs  presentation.rs
src/data/: repository.rs
src/data/locales/ru-RU/: main.ftl
src/data/repository/: ciphered_file_type.rs  error.rs
src/domain/: model.rs
src/domain/model/: practical_lesson.rs  rating_data.rs
src/presentation/: enter.rs  information.rs  locale.rs  rating.rs
src/presentation/enter/: components.rs  enter_view.rs
src/presentation/enter/components/: labeled_text_field.rs
src/presentation/information/: information_view.rs
src/presentation/rating/: components.rs  data_state.rs  rating_view.rs
src/presentation/rating/components/: list_data_view.rs  rating_information_view.rs
